# RAG-against-the-machine

./: Makefile  README.md  pyproject.toml
src/: __main__.py  chunker.py  indexer.py  ingestion.py  main.py  models.py
