[project]
name = "git-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.3",
    "dspy>=3.1.3",
    "flake8>=7.3.0",
    "mypy>=1.20.1",
    "pydantic>=2.13.0",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]
